openapi.yaml を導入する
swagger とか openapi の自動更新のためのホットリロードの設定を追加

クリーンアーキテクチャとOpenAPIスキーマ分割

--- a/backend/.air.toml
+++ b/backend/.air.toml
@@ -4,6 +4,16 @@ tmp_dir = "tmp"
 [build]
   bin = "./tmp/main"
   cmd = "go build -o ./tmp/main ./cmd/api"
-  include_ext = ["go"]
-  exclude_dir = ["tmp"]
+
+  include_ext = ["go", "yaml", "toml"]
+  exclude_dir = ["vendor", "tmp"]
+  exclude_file = ["*.log"]
   stop_on_error = true
+
+[log]
+  color = true
+  time = true
+  main_only = true
+
+[misc]
+  clean_on_exit = true
