OpenAPI 前提の開発環境の構築

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,16 +1,35 @@
-.PHONY: help lint fmt test dev build openapi-gen swagger
+.PHONY: help lint fmt test dev build openapi-gen gen-api openapi redoc install dev-full
 
 # デフォルトターゲット - ヘルプを表示
 help:
 	@echo "利用可能なコマンド:"
+	@echo "  install 必要なツールをインストール"
 	@echo "  dev         開発環境の立ち上げ"
 	@echo "  test        テストの実行"
 	@echo "  lint        コードの静的解析"
 	@echo "  fmt         コードフォーマット"
 	@echo "  build       アプリケーションのビルド"
-	@echo "  openapi-gen OpenAPIからコードを生成"
-	@echo "  swagger     Swagger UI を起動"
+	@echo "  gen-api     OpenAPIからコードを生成"
+	@echo "  redoc       ReDoc でOpenAPI仕様を確認"
+	@echo "  bundle      OpenAPIファイルを結合"
+	@echo "  dev-full    コード生成 + ドキュメント + 開発サーバー"
+	@echo "  openapi-gen OpenAPIからコードを生成（従来版）"
+	@echo "  openapi     ReDoc を起動（redoc のエイリアス）"
 	@echo "  help        このヘルプを表示"
+
+# 必要なツールをインストール
+install:
+	@echo "開発に必要なツールをインストールしています..."
+	@echo "Go ツール:"
+	go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
+	go install github.com/deepmap/oapi-codegen/cmd/oapi-codegen@latest
+	go install github.com/air-verse/air@latest
+	@echo "Node.js ツール:"
+	npm install -g http-server
+	npm install -g @redocly/cli
+	@echo ""
+	@echo "✅ インストール完了"
+	@echo "使い方: make gen-api → make redoc → make dev"
 
 # 開発環境の立ち上げ
 dev:
@@ -43,17 +62,33 @@ build:
 	go build -o bin/api cmd/api/main.go
 	@echo "ビルドが完了しました: bin/api"
 
-# OpenAPIからコードを生成
+.PHONY: redocly-bundle
+redocly-bundle: # redocly で OpenAPI を単一ファイルにする
+	@npx @redocly/cli@1.34.2 bundle openapi.yaml -o openapi-bundle.yaml
+
+.PHONY: redocly-split
+redocly-split: # redocly で OpenAPI を複数ファイルに分割する
+	@npx @redocly/cli@1.34.2 split openapi-bundle.yaml --outDir schemas
+
+.PHONY: gen-api
+gen-api: redocly-bundle ## コード生成（oapi-codegen）
+	@go run github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen --config=./oapi-codegen.yaml ./openapi-bundle.yaml
+	@go mod tidy
+
+# OpenAPIからコードを生成（従来版）
 openapi-gen:
 	@echo "OpenAPIからコードを生成しています"
-	@if command -v oapi-codegen >/dev/null 2>&1; then \
-		oapi-codegen --config=./oapi-codegen.yaml ./openapi.yaml; \
-	else \
-		echo "oapi-codegen がインストールされていません。インストールしてください:"; \
-		echo "go install github.com/deepmap/oapi-codegen/cmd/oapi-codegen@latest"; \
-	fi
+	@oapi-codegen --config=./oapi-codegen.yaml ./openapi.yaml
 
-# Swagger UI を起動
-swagger:
-	@echo "Swagger UI を起動しています"
-	@docker run -p 3000:8080 -v $(PWD):/tmp -e SWAGGER_JSON=/tmp/openapi.yaml swaggerapi/swagger-ui
+.PHONY: redoc
+redoc: ## redoc を起動する
+	npx @redocly/cli@1.34.2 preview-docs -p 3001 openapi.yaml
+
+
+# 開発用統合コマンド
+dev-full:
+	@echo "統合開発環境を起動中..."
+	@$(MAKE) --no-print-directory gen-api
+	@echo "APIサーバー: http://localhost:8080"
+	@echo "ReDoc: 別ターミナルで 'make redoc' を実行"
+	@$(MAKE) --no-print-directory dev
