openapi の generater の修正

--- a/backend/internal/api/openapi/oapi-codegen.yaml
+++ b/backend/internal/api/openapi/oapi-codegen.yaml
@@ -1,5 +1,5 @@
 package: api
-output: ../../gen/api/generated.go
+output: ../../../internal/gen/api/generated.go
 generate:
   models: true
   gin-server: true
