feat : cors の設定

--- a/backend/internal/api/openapi/components/schemas/CreateTaskRequest.yaml
+++ b/backend/internal/api/openapi/components/schemas/CreateTaskRequest.yaml
@@ -18,7 +18,7 @@ properties:
   status:
     type: string
     description: タスクの状態
-    enum: ['', 'todo', 'in_progress', 'done']
+    enum: ['todo', 'in_progress', 'done']
+    default: 'todo'
 required:
   - title
-  - status
