--- a/backend/internal/api/openapi/components/schemas/EditTaskRequest.yaml
+++ b/backend/internal/api/openapi/components/schemas/EditTaskRequest.yaml
@@ -18,4 +18,4 @@ properties:
   status:
     type: string
     description: タスクの状態
-    enum: ['', 'todo', 'in_progress', 'done']
+    enum: ['todo', 'in_progress', 'done']
