--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,8 @@
 # API Configuration
 VITE_API_BASE_URL=http://localhost:8080/api/v1
 
+# Google OAuth Configuration
+VITE_GOOGLE_AUTH_URL=http://localhost:8080/auth/google/callback
+
 # Environment
 VITE_ENV=development
