feat : AI に指令を出すAPI のOpenAPI の設計

--- a/backend/internal/api/openapi/components/schemas/AIInterpretation.yaml
+++ b/backend/internal/api/openapi/components/schemas/AIInterpretation.yaml
@@ -17,23 +17,94 @@ properties:
     properties:
       type:
         type: string
-        enum: [task, event, unknown]
+        enum: [todo, event, reminder, note, expense, unknown]
+        description: アイテムタイプ
       title:
         type: string
+        description: タイトル
       description:
         type: string
-      due_at:
-        type: string
-        format: date-time
-      starts_at:
-        type: string
-        format: date-time
-      ends_at:
-        type: string
-        format: date-time
+        description: 説明
+      metadata:
+        type: object
+        description: 追加のメタデータ
+        properties:
+          deadline:
+            type: string
+            format: date-time
+            description: 期限
+          priority:
+            type: string
+            enum: [low, medium, high]
+            description: 優先度
+          tags:
+            type: array
+            items:
+              type: string
+            description: タグ
+          location:
+            type: string
+            description: 場所
+          amount:
+            type: number
+            format: float
+            description: 金額
+          currency:
+            type: string
+            description: 通貨
+          category:
+            type: string
+            description: カテゴリ
+          start_time:
+            type: string
+            format: date-time
+            description: 開始時刻
+          end_time:
+            type: string
+            format: date-time
+            description: 終了時刻
+    examples:
+      - type: todo
+        title: 大根を買う
+        metadata:
+          deadline: "2025-01-15T00:00:00Z"
+          priority: high
+          tags: ["買い物", "食材"]
+          location: スーパー
+      - type: event
+        title: プロジェクト会議
+        description: Q1のレビュー会議
+        metadata:
+          start_time: "2025-01-20T14:00:00Z"
+          end_time: "2025-01-20T15:30:00Z"
+          location: 第2会議室
+          tags: ["仕事", "会議"]
+      - type: reminder
+        title: 歯医者の予約確認
+        metadata:
+          deadline: "2025-01-18T10:00:00Z"
+          priority: medium
+      - type: note
+        title: アイデアメモ
+        description: 新機能のアイデア - AIによる自動カテゴリ分類
+        metadata:
+          tags: ["アイデア", "機能改善"]
+      - type: expense
+        title: ランチ代
+        metadata:
+          amount: 1200
+          currency: JPY
+          category: 食費
+          tags: ["経費", "食事"]
   ai_model:
     type: string
     description: 使用AIモデル
+  ai_prompt_tokens:
+    type: integer
+    description: 入力トークン数
+  ai_completion_tokens:
+    type: integer
+    description: 出力トークン数
   created_at:
     type: string
     format: date-time
