--- a/backend/internal/api/openapi/paths/interpretations.yaml
+++ b/backend/internal/api/openapi/paths/interpretations.yaml
@@ -1,3 +1,47 @@
+post:
+  summary: CreateInterpretation
+  description: 自然言語入力によるAI解析
+  operationId: createInterpretation
+  security:
+    - BearerAuth: []
+  requestBody:
+    required: true
+    content:
+      application/json:
+        schema:
+          $ref: '../components/schemas/CreateInterpretationRequest.yaml'
+  responses:
+    '200':
+      description: Success
+      content:
+        application/json:
+          schema:
+            $ref: '../components/schemas/InterpretationResponse.yaml'
+    '400':
+      description: Bad Request
+      content:
+        application/json:
+          schema:
+            $ref: '../components/schemas/ErrorResponse.yaml'
+    '401':
+      description: Unauthorized
+      content:
+        application/json:
+          schema:
+            $ref: '../components/schemas/ErrorResponse.yaml'
+    '422':
+      description: Unprocessable Entity (AI解析エラー)
+      content:
+        application/json:
+          schema:
+            $ref: '../components/schemas/ErrorResponse.yaml'
+    '500':
+      description: Internal Server Error
+      content:
+        application/json:
+          schema:
+            $ref: '../components/schemas/ErrorResponse.yaml'
+
 get:
   summary: ListInterpretations
   description: AI解析履歴の取得
@@ -10,7 +54,7 @@ get:
       description: AI解析のtype絞り込み
       schema:
         type: string
-        enum: [task, event, unknown]
+        enum: [todo, event, reminder, note, expense, unknown]
     - name: limit
       in: query
       description: "取得件数（デフォルト: 20）"
