--- a/backend/internal/api/openapi/components/schemas/InterpretationResponse.yaml
+++ b/backend/internal/api/openapi/components/schemas/InterpretationResponse.yaml
@@ -2,19 +2,15 @@ type: object
 properties:
   type:
     type: string
-    enum: [task, unknown]
+    enum: [todo, event, reminder, note, expense, unknown]
     description: 解析結果のタイプ
-  task:
-    $ref: './Task.yaml'
-    nullable: true
+  interpretation:
+    $ref: './AIInterpretation.yaml'
+    description: AI解釈結果
   message:
     type: string
     nullable: true
     description: type=unknownの場合のメッセージ
-  interpretation_id:
-    type: string
-    format: uuid
-    description: AI解釈ID
 required:
   - type
-  - interpretation_id
+  - interpretation
