ref: 認証機能の実装とタスク機能の拡張
- 認証ミドルウェアを実装し、AI解釈エンドポイントに認証を適用
- タスクに優先度（priority）フィールドを追加（low/medium/high）
- タスクにAI解釈ID（interpretation_id）フィールドを追加し、タスクとAI解釈の関連付けを可能に
- フロントエンドで401エラー時の自動ログインリダイレクトを実装
- Geminiモデルのデフォルトをgemini-2.5-flash-liteに変更し、コスト最適化

--- a/backend/internal/api/openapi/components/schemas/CreateTaskRequest.yaml
+++ b/backend/internal/api/openapi/components/schemas/CreateTaskRequest.yaml
@@ -20,5 +20,15 @@ properties:
     description: タスクの状態
     enum: ['todo', 'in_progress', 'done']
     default: 'todo'
+  priority:
+    type: string
+    description: タスクの優先度
+    enum: ['low', 'medium', 'high']
+    nullable: true
+  interpretation_id:
+    type: string
+    format: uuid
+    nullable: true
+    description: このタスクを作成したAI解釈のID
 required:
   - title
