--- a/backend/internal/api/openapi/components/schemas/Task.yaml
+++ b/backend/internal/api/openapi/components/schemas/Task.yaml
@@ -24,6 +24,16 @@ properties:
     type: string
     description: タスクの状態
     enum: ['todo', 'in_progress', 'done']
+  priority:
+    type: string
+    description: タスクの優先度
+    enum: ['low', 'medium', 'high']
+    nullable: true
+  interpretation_id:
+    type: string
+    format: uuid
+    nullable: true
+    description: このタスクを作成したAI解釈のID
   created_at:
     type: string
     format: date-time
