--- a/backend/internal/api/openapi/components/schemas/UpdateTaskRequest.yaml
+++ b/backend/internal/api/openapi/components/schemas/UpdateTaskRequest.yaml
@@ -19,6 +19,11 @@ properties:
     type: string
     description: タスクの状態
     enum: ['todo', 'in_progress', 'done']
+  priority:
+    type: string
+    description: タスクの優先度
+    enum: ['low', 'medium', 'high']
+    nullable: true
 required:
   - title
   - status
