バックエンド：AI に指示→タスクを作成

--- a/backend/bobgen.yaml
+++ b/backend/bobgen.yaml
@@ -6,10 +6,16 @@ mysql:
   output: ./gen/models
   pkgname: models
 
+  # Factory configuration
+  factory:
+    output: ./factory
+    models: github.com/yoshioka0101/ai_plan_chat/gen/models
+
   only:
     users:
     user_auths:
     ai_interpretations:
+    interpretation_items:
     tasks:
 
   # リレーションシップの生成を有効化
