--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,11 @@
+# syntax=docker/dockerfile:1.6
+
 # Multi-stage build for backend API
 # go.mod / toolchain に合わせて 1.24 系を使用
-FROM golang:1.24.5-bullseye AS builder
+FROM --platform=$BUILDPLATFORM golang:1.24.5-bullseye AS builder
+
+ARG TARGETOS TARGETARCH
+ENV CGO_ENABLED=0 GOOS=$TARGETOS GOARCH=$TARGETARCH
 
 WORKDIR /app
 
@@ -8,9 +13,9 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 
-# 残りのソースをコピーしてビルド
+# 残りのソースをコピーしてビルド（Go が自前でクロスコンパイルするので QEMU 依存を避けられる）
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o /app/server ./cmd/api
+RUN go build -o /app/server ./cmd/api
 
 # ---- runtime stage ----
 FROM gcr.io/distroless/static:nonroot
