--- a/.github/workflows/tbls.yml
+++ b/.github/workflows/tbls.yml
@@ -1,4 +1,4 @@
-name: Generate DB Documentation
+name: Database Schema CI/CD
 
 on:
   # push:
@@ -16,7 +16,46 @@ on:
     #   - '.tbls.yml'
 
 jobs:
-  tbls:
+  atlas:
+    name: Atlas Migration
+    runs-on: ubuntu-latest
+
+    services:
+      mysql:
+        image: mysql:8.4
+        env:
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: ai_chat_task
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping -h localhost"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Install Atlas CLI
+        run: |
+          curl -sSf https://atlasgo.sh | sh
+
+      - name: Lint migrations
+        run: |
+          atlas migrate lint --dir file://migrations --dev-url "docker://mysql/8/dev" --latest 1
+
+      - name: Apply migrations
+        run: |
+          atlas migrate hash --dir file://migrations
+          atlas migrate apply --dir file://migrations --url "mysql://root:password@localhost:3306/ai_chat_task"
+
+  generate-docs:
+    name: Generate ER Diagram
+    needs: atlas
     runs-on: ubuntu-latest
     permissions:
       contents: write
